codepkg/objects/Salary_Survey_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Salary Survey Line Items</relationshipLabel>
        <relationshipName>Salary_Survey_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Salary_Survey__c</fullName>
        <label>Agency Salary Survey</label>
        <referenceTo>Agency_Salary_Survey__c</referenceTo>
        <relationshipLabel>Salary Survey Line Items</relationshipLabel>
        <relationshipName>Salary_Survey_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Are_you_adding_WC_UI__c</fullName>
        <label>Are you adding WC/UI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Rates__c</fullName>
        <label>Base Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFAA_Line_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFAA Line Item</label>
        <referenceTo>CFAA_Line_Items__c</referenceTo>
        <relationshipLabel>Salary Survey Line Items</relationshipLabel>
        <relationshipName>Salary_Survey_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFAA</label>
        <referenceTo>CFAA__c</referenceTo>
        <relationshipLabel>Salary Survey Line Items</relationshipLabel>
        <relationshipName>Salary_Survey_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <label>Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <label>Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Type__c</fullName>
        <label>Line Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Special Equipment</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Resource Agreements</fullName>
                </value>
                <value>
                    <fullName>Non-Supression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOU_MOA_GBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU/MOA/GBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOU_MOA_GBR_for_Portal_to_Portal__c</fullName>
        <label>MOU/MOA/GBR for Portal-to-Portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOU_MOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU/MOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOU_MOA_for_overtime__c</fullName>
        <label>MOU/MOA for overtime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_T_P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P-T-P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revised_Rate__c</fullName>
        <label>Salary Rate(ST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Equipment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Equipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Rate FILLABLE</fullName>
                </value>
                <value>
                    <fullName>Non-Suppression Personnel - FILLABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_and_or_UI__c</fullName>
        <label>Is Revised Rate is Same as Base Rate ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Salary Survey Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Classification_Title__c</columns>
        <columns>Agency_Salary_Survey__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Rates__c</columns>
        <columns>Are_you_adding_WC_UI__c</columns>
        <columns>MOU_MOA_for_overtime__c</columns>
        <columns>MOU_MOA_GBR_for_Portal_to_Portal__c</columns>
        <columns>P_T_P__c</columns>
        <columns>Revised_Rate__c</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Salary Survey Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Survey Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>